Added more styling, made responsive for more screen sizes, added countdown timer

--- a/overview.html
+++ b/overview.html
@@ -51,49 +51,90 @@
           <hr class="h2Line">
           <div class="overviewContainer">
             <div class="textContainer">
-              <p class="overviewP">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                id est laborum. Duis aute irure dolor in reprehenderit in
-                voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                id est laborum.</p>
-              <p class="overviewP2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                id est laborum.</p>
+              <p class="overviewP">The Mars 2020 rover mission is part of NASA's Mars Exploration Program,
+                a long-term effort of robotic exploration of the Red Planet. The Mars 2020 mission addresses
+                high-priority science goals for Mars exploration, including key questions about the potential
+                for life on Mars. The mission takes the next step by not only seeking signs of habitable
+                conditions on Mars in the ancient past, but also searching for signs of past microbial life
+                itself. The Mars 2020 rover introduces a drill that can collect core samples of the most
+                promising rocks and soils and set them aside in a "cache" on the surface of Mars.
+                A future mission could potentially return these samples  to Earth.
+                That would help scientists study the samples in laboratories with special room-sized
+                equipment that would be too large to take to Mars. The mission also provides opportunities
+                to gather knowledge and demonstrate technologies that address the challenges of future human
+                expeditions to Mars. These include testing a method for producing oxygen from the Martian
+                atmosphere, identifying other resources (such as subsurface water), improving landing
+                techniques, and characterizing weather, dust, and other potential environmental conditions
+                that could affect future astronauts living and working on Mars.</p>
+              <p class="overviewP2">The mission is timed for a launch opportunity in July 2020 when Earth and Mars are in good
+                positions relative to each other for landing on Mars. That is, it takes less power to travel
+                to Mars at this time, compared to other times when Earth and Mars are in different positions
+                in their orbits. To keep mission costs and risks as low as possible, the Mars 2020 design is
+                based on NASA's successful Mars Science Laboratory mission architecture, including its Curiosity
+                rover and proven landing system.</p>
             </div>
             <div class="imageBox">
-              <img id="overviewImg" src="/images/marsRover2.jpg" alt="Mars rover vehicle">
+              <img id="overviewImg" src="/images/overview.jpg" alt="Mars rover vehicle">
             </div>
           </div>
           <hr class="overviewHr">
         </div>
         <div class="textBox2">
+          <h3 id="overviewH3">Technologies for Entry, Descent, and Landing</h3>
           <div class="overviewContainer">
             <div class="imageBox2">
-              <img id="overviewImg" src="/images/marsRover2.jpg" alt="Mars rover vehicle">
+              <img id="overviewImg2" src="/images/roverInfo.jpg" alt="Mars rover vehicle">
             </div>
             <div class="textContainer">
-              <p class="overviewP3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                id est laborum. Duis aute irure dolor in reprehenderit in
-                voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                id est laborum.</p>
-              <p class="overviewP4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                id est laborum.</p>
+              <p class="overviewP3">The mission relies on successfully demonstrated technological innovations,
+                 especially for entry, descent, and landing (EDL). Like NASA's Curiosity rover
+                 (Mars Science Laboratory mission), the Mars 2020 spacecraft uses a guided entry, descent,
+                 and landing system. The Mars 2020 mission landing system includes a parachute, descent
+                 vehicle, and an approach called a "skycrane maneuver" for lowering the rover on a tether to
+                 the surface during the final seconds prior to landing. This type of landing system provides
+                 the ability to land a very large, heavy rover on the surface of Mars in a more precise
+                 landing area than was possible before Curiosity's landing.</p>
+
+              <p class="overviewP3">The Mars 2020 rover adds new entry, descent, and landing (EDL) technologies,
+                 such as Terrain-Relative Navigation
+                 (TRN). Terrain-Relative Navigation allows the rover to detect and to avoid hazardous
+                 terrain by diverting around it during its descent through the Martian atmosphere.
+                 A microphone allows engineers to analyze entry, descent, and landing. It might also capture
+                 sounds of the rover at work, which would provide engineers with clues about the rover's
+                 health and operations.</p>
+            </div>
+          </div>
+        </div>
+        <hr class="overviewHr">
+        <div class="textBox1">
+          <h3 id="overviewH3Last">Technologies for Surface Operations</h3>
+          <div class="overviewContainer">
+            <div class="textContainer">
+              <p class="overviewP4">The Mars 2020 rover design is largely based on the engineering design
+                for Mars rover Curiosity. This reliance on a proven system reduces mission costs and risks.
+                The rover's long-range mobility system allows it to travel on the surface of Mars over a
+                distance of 3 to 12 miles (5 to 20 kilometers). The rover has a new, more capable wheel
+                design, among other improvements. For the first time, the rover carries a drill for coring
+                samples from Martian rocks and soil. It gathers and stores the cores in tubes on the Martian
+                surface, using a strategy called "depot caching." Caching demonstrates a new rover capability
+                of gathering, storing, and preserving samples. It could potentially pave the way for future
+                missions that could collect the samples and return them to Earth for intensive laboratory
+                analysis.</p>
+              <p class="overviewP4">The Mars 2020 rover helps prepare for future human exploration of Mars with a technology for
+                extracting oxygen from the Martian atmosphere, which is 96 percent carbon dioxide.
+                This demonstration of new technology helps mission planners test ways of using Mars'
+                natural resources to support human explorers and improve designs for life support,
+                transportation, and other important systems for living and working on Mars.</p>
+            </div>
+            <div class="imageBox2">
+              <div id="overviewInfo">
+                <h3>LINKS TO MORE INFORMATION</h3>
+                <ul>
+                  <li><a href="https://mars.nasa.gov/mars2020/">Mars 2020 Official Page</a></li>
+                  <li><a href="https://spaceflightnow.com/launch-schedule/">Upcoming planned orbital missions </a></li>
+                  <li><a href="https://www.nasa.gov/nasalive">Live feeds of launches</a></li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
