--- a/timeline.html
+++ b/timeline.html
@@ -56,59 +56,60 @@
         <h3>STAGE DETAILS</h3>
         <section id="stagesGrid">
           <div class="stagesBox1 stagesBox">
-            <h4 class="stagesH4">STAGE 1</h4>
+            <h4 class="stagesH4">STAGE 1 - LAUNCH</h4>
             <div class="stagesText">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                 ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                 laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                 voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                 id est laborum.</p>
+              <p>Launch will take place at Cape Canaveral Air Force Station in Florida, on the 17th of August, 2020.
+                 This time has been chosen because Earth and Mars are in good positions relative to each other
+                 for landing on Mars at this time. Having the launch at this time will ensure the minimum amount
+                 of power consumption compared to when Earth and Mars are in different possitions in their orbit.
+              </p>
             </div>
           </div>
           <div class="stagesBox2 stagesBox">
-            <h4 class="stagesH4">STAGE 2</h4>
+            <h4 class="stagesH4">STAGE 2 - JOURNEY</h4>
             <div class="stagesText">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                 ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                 laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                 voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                 id est laborum.</p>
+              <p>The journey to Mars will take approximately 9 months. While in the cruise stage towards Mars
+                 the rover and its landing system are enclosed in an aeroshell(backshell with heat shield)</p>
             </div>
           </div>
           <div class="stagesBox3 stagesBox">
-            <h4 class="stagesH4">STAGE 3</h4>
+            <h4 class="stagesH4">STAGE 3 - ENTRY</h4>
             <div class="stagesText">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                 ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                 laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                 voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                 id est laborum.</p>
+              <p>The entry, descent and landing process is very similar to the one that was used in landing
+                 the Mars rover, Curiosity. The Mars 2020 has major new technologies to improve this process:
+              </p>
+              <ol>
+                <li>Takes descent photos</li>
+                <li>Compares it to orbital map</li>
+                <li>Diverts if necessary</li>
+              </ol>
             </div>
           </div>
           <div class="stagesBox4 stagesBox">
-            <h4 class="stagesH4">STAGE 4</h4>
+            <h4 class="stagesH4">STAGE 4 - LANDING</h4>
             <div class="stagesText">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                 ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                 laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                 voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                 id est laborum.</p>
+              <p>80 seconds after heat shield seperation, the backshell and parachute separate, and the
+                 backshell is dropped in free fall at a height of 1 mile. It is now falling at 170 miles per hour.
+                 Next, all eight retrorockets fire up to control the fall. It now gradually slows down speed
+                 while the rover gets lowered down with cables</p>
             </div>
           </div>
           <div class="stagesBox5 stagesBox">
-            <h4 class="stagesH4">STAGE 5</h4>
+            <h4 class="stagesH4">STAGE 5 - SURFACE OPERATIONS</h4>
             <div class="stagesText">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                 ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                 laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                 voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                 id est laborum.</p>
+              <p>This is when the Rover can start conducting its scientific studies on Mars.
+                 While exploring Mars, the rover will find rocks that formed in, or were altered by environments
+                 that could have supported microbial life in Mars' ancient past.
+                 Find rocks capable of preserving chemical traces of ancient life. It will drill core samples
+                 from promising rock and soil targets. And it will test the ability to produce oxygen
+                 from the carbon-dioxide Martian atmosphere, in support of future human missions.</p>
             </div>
+          </div>
+        </section>
+        <section id="countdownSection">
+          <h4 id="countdownH4">Countdown to launch: </h4>
+          <div class="countdownTimer">
+
           </div>
         </section>
       </main>
@@ -128,5 +129,6 @@
       </footer>
     </div>
     <script src="/js/script.js"></script>
+    <script src="/js/countdown.js"></script>
   </body>
 </html>
