--- a/weather.html
+++ b/weather.html
@@ -45,7 +45,7 @@
       </header>
       <main id="mainWeather" class="main">
         <div class="topImage">
-          <img id="overviewBanner" src="/images/marsWeather.jpg" alt="Picture of mars surface">
+          <img id="weatherBanner" src="/images/marsWeather.jpg" alt="Picture of mars surface">
         </div>
         <div class="textBox1">
           <h2>MARS WEATHER</h2>
@@ -84,20 +84,45 @@
               </div>
           </div>
         </section>
+        <h4 id="weatherH4">Climate on Mars</h4>
         <section id="weatherParagraph">
-          <h4 id="weatherH4">Climate on Mars</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-             ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-             laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-             voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-             id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-             ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-             laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-             voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-             id est laborum.</p>
+          <div class="weatherSection1">
+            <p>The climate of the planet Mars has been a topic of scientific curiosity for centuries, in part
+                because it is the only terrestrial planet whose surface can be directly observed in detail from the
+                Earth with help from a telescope.
+                Although Mars is smaller than the Earth, 11% of Earth's mass, and 50% farther from the Sun than
+                the Earth, its climate has important similarities, such as the presence of polar ice caps,
+                seasonal changes and observable weather patterns. It has attracted sustained study from
+                planetologists and climatologists.</p>
+            <p> While Mars' climate has similarities to Earth's,
+                including periodic ice ages, there are also important differences, such as much lower thermal
+                inertia. Mars' atmosphere has a scale height of approximately 11 km (36,000 ft),
+                60% greater than that on Earth.
+                The climate is of considerable relevance to the question of whether life is or was present on
+                the planet. The climate briefly received more interest in the news due to NASA measurements
+                indicating increased sublimation of one near-polar region leading to some popular press
+                speculation that Mars was undergoing a parallel bout of global warming,[1] although Mars' average
+                temperature has actually cooled in recent decades, and the polar caps themselves are growing.</p>
+          </div>
+
+          <div class="weatherSection1">
+            <p> Mars has been studied by Earth-based instruments since the 17th century, but it is only since
+              the exploration of Mars began in the mid-1960s that close-range observation has been possible.
+              Flyby and orbital spacecraft have provided data from above, while landers and rovers have
+              measured atmospheric conditions directly. Advanced Earth-orbital instruments today continue to
+              provide some useful "big picture" observations of relatively large weather phenomena.</p>
+
+              <p> The first Martian flyby mission was Mariner 4, which arrived in 1965.
+              That quick two-day pass (July 14–15, 1965) with crude instruments contributed little to the
+              state of knowledge of Martian climate. Later Mariner missions (Mariner 6, and Mariner 7) filled
+              in some of the gaps in basic climate information.
+              Data-based climate studies started in earnest with the Viking program landers in 1975 and
+              continue with such probes as the Mars Reconnaissance Orbiter.</p>
+
+              <p> This observational work has been complemented by a type of scientific computer simulation
+              called the Mars general circulation model.[2] Several different iterations of MGCM have led to
+              an increased understanding of Mars as well as the limits of such models.</p>
+          </div>
         </section>
       </main>
       <div id="newMain"></div>
