--- a/overview.html
+++ b/overview.html
@@ -26,16 +26,9 @@
             <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </nav>
-        <div class="burger">
-          <div class="line"></div>
-          <div class="line"></div>
-          <div class="line"></div>
-          <div class="social">
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-envelope"></a>
-          </div>
-        </div>
+        <button aria-label="menu" class="burger">
+          <i class="fa fa-bars"></i>
+        </button>
         <div class="social">
           <a href="#" class="fa fa-facebook"></a>
           <a href="#" class="fa fa-twitter"></a>
