--- a/weather.html
+++ b/weather.html
@@ -27,16 +27,9 @@
             <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </nav>
-        <div class="burger">
-          <div class="line"></div>
-          <div class="line"></div>
-          <div class="line"></div>
-          <div class="social">
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-envelope"></a>
-          </div>
-        </div>
+        <button aria-label="menu" class="burger">
+          <i class="fa fa-bars"></i>
+        </button>
         <div class="social">
           <a href="#" class="fa fa-facebook"></a>
           <a href="#" class="fa fa-twitter"></a>
@@ -101,7 +94,7 @@
                 The climate is of considerable relevance to the question of whether life is or was present on
                 the planet. The climate briefly received more interest in the news due to NASA measurements
                 indicating increased sublimation of one near-polar region leading to some popular press
-                speculation that Mars was undergoing a parallel bout of global warming,[1] although Mars' average
+                speculation that Mars was undergoing a parallel bout of global warming, although Mars' average
                 temperature has actually cooled in recent decades, and the polar caps themselves are growing.</p>
           </div>
 
@@ -120,7 +113,7 @@
               continue with such probes as the Mars Reconnaissance Orbiter.</p>
 
               <p> This observational work has been complemented by a type of scientific computer simulation
-              called the Mars general circulation model.[2] Several different iterations of MGCM have led to
+              called the Mars general circulation model. Several different iterations of MGCM have led to
               an increased understanding of Mars as well as the limits of such models.</p>
           </div>
         </section>
